# Lumina

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: verify-before-done.mdc
.github/workflows/: ci.yml
config/: mcp.json.example
desktop/: main.js  package-lock.json  package.json  preload.js
desktop/icons/: icon.icns
desktop/ui/: api.js  app.js  bootstrap.js  chat.css  chat.js  conversation_map.js  graph.js  i18n.js  index.html  location.js  lunar.js  markdown.js  mascot.css  mascot.html  mascot.js  settings.js  skills.js  styles.css  theme.js  tokens.css  topbar-lite.css  topbar.js  workspace.css  workspace.html  workspace.js
docs/: 4-harness-comparison.md  PRD.md  harness-design.md  subagent-loop-comparison.md  workflow-dag-design.md
docs/reply-safety/: README.md  forbidden-terms.md  meta-reply.md  profanity.md  unprofessional.md
scripts/: build-app-icon.sh  debug_e2e.py  e2e-smoke.sh  install-electron.sh  start-backend.sh
src/secretary/: __init__.py  config.py  exceptions.py  main.py
tests/: conftest.py
tests/agent/: test_agent_profile.py  test_archetype_router.py  test_browser_tools.py  test_chat_service.py  test_chat_tool_registry.py  test_chat_uploads.py  test_cli_agent_prompt.py  test_cli_agent_runner.py  test_code_exec_documents.py  test_command_receipts.py  test_connector_tools.py  test_context_compaction.py  test_executable_skill.py  test_file_auth_loop.py  test_github_trending_fetch.py  test_grounding.py  test_harness_mcp_hardening.py  test_harness_p0.py  test_hook_policies.py  test_identity.py  test_list_dir_tool.py  test_llm_client.py  test_llm_config.py  test_loop_auto_list_dir.py  test_loop_cancel.py  test_loop_multi_tools.py  test_loop_tool_messages.py  test_loop_tools.py  test_mcp_builtin.py  test_mcp_manager.py  test_p0_tools.py  test_pause_persist.py  test_progress_hub.py  test_project_author.py  test_prompt_gate.py  test_reflection_runner.py  test_reflection_trigger.py  test_reply_rewriter.py  (+16 more)
(+175 files in other folders)
