[project]
name = "lumina"
version = "0.1.0"
description = "CN-local personal AI secretary with integrations and desktop mascot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "openpyxl>=3.1.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
    "httpx>=0.27.0",
]
e2e = [
    "playwright>=1.49.0",
    "pytest-playwright>=0.6.2",
    "httpx>=0.27.0",
]

[project.scripts]
secretary = "secretary.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secretary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "e2e: PRD release smoke via HTTP API (mock LLM)",
    "ui: Playwright browser smoke against live backend",
]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/secretary/memory/db.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["secretary"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "shibei.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pypdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tiktoken"
ignore_missing_imports = true
